5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/1165/executions/1590_1446.log
== TEST (2019-03-20 15:39:36) 
-- CODE:
a = float(input("Quantos litros de michael comprou? "))


-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 13:10:59) 
-- CODE:
a = float(input("Quantos litros de  polpa de frutas michael comprou? "))
b = print(round(1/3,3))

-- OUTPUT:
0.333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 13:11:05) 
-- CODE:
a = float(input("Quantos litros de  polpa de frutas michael comprou? "))
b = print(round(1/3,3))

-- EXECUTION TIME:
0.134246
-- TEST CASE 1:
---- input:
7
---- correct output:
2.333
---- user output:
0.333
-- TEST CASE 2:
---- input:
20.0
---- correct output:
6.667
---- user output:
0.333
-- TEST CASE 3:
---- input:
15
---- correct output:
5.0
---- user output:
0.333
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 13:13:32) 
-- CODE:
a = float(input("Quantos litros de  polpa de frutas michael comprou? "))
b = print(round(1/3,3))

-- OUTPUT:
0.333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 13:18:39) 
-- CODE:
a = float(input("Quantos litros de  polpa de frutas michael comprou? "))
m =  x - 2/3
print(round(m,3))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    m =  x - 2/3
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 13:18:44) 
-- CODE:
a = float(input("Quantos litros de  polpa de frutas michael comprou? "))
m =  x - 2/3
print(round(m,3))


-- EXECUTION TIME:
0.132989
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/1446/main.py", line 2, in <module>
    m =  x - 2/3
NameError: name 'x' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 13:19:14) 
-- CODE:
a = float(input("Quantos litros de  polpa de frutas michael comprou? "))
m =  x - 2/3



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    m =  x - 2/3
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 13:19:16) 
-- CODE:
a = float(input("Quantos litros de  polpa de frutas michael comprou? "))
m =  x - 2/3



-- EXECUTION TIME:
0.15499
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/1446/main.py", line 2, in <module>
    m =  x - 2/3
NameError: name 'x' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 13:19:17) 
-- CODE:
a = float(input("Quantos litros de  polpa de frutas michael comprou? "))
m =  x - 2/3



-- EXECUTION TIME:
0.106354
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/1446/main.py", line 2, in <module>
    m =  x - 2/3
NameError: name 'x' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 13:19:18) 
-- CODE:
a = float(input("Quantos litros de  polpa de frutas michael comprou? "))
m =  x - 2/3



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    m =  x - 2/3
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 13:29:39) 
-- CODE:
a = float(input("Quantos litros de  polpa de frutas michael comprou? "))

total = a - 2/3 + 1/3

print(round(a, 3))



-- OUTPUT:
7.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 13:29:44) 
-- CODE:
a = float(input("Quantos litros de  polpa de frutas michael comprou? "))

total = a - 2/3 + 1/3

print(round(a, 3))



-- EXECUTION TIME:
0.157846
-- TEST CASE 1:
---- input:
7
---- correct output:
2.333
---- user output:
7.0
-- TEST CASE 2:
---- input:
20.0
---- correct output:
6.667
---- user output:
20.0
-- TEST CASE 3:
---- input:
15
---- correct output:
5.0
---- user output:
15.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 13:29:49) 
-- CODE:
a = float(input("Quantos litros de  polpa de frutas michael comprou? "))

total = a - 2/3 + 1/3

print(round(a, 3))



-- EXECUTION TIME:
0.133388
-- TEST CASE 1:
---- input:
7
---- correct output:
2.333
---- user output:
7.0
-- TEST CASE 2:
---- input:
20.0
---- correct output:
6.667
---- user output:
20.0
-- TEST CASE 3:
---- input:
15
---- correct output:
5.0
---- user output:
15.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 13:29:52) 
-- CODE:
a = float(input("Quantos litros de  polpa de frutas michael comprou? "))

total = a - 2/3 + 1/3

print(round(a, 3))



-- OUTPUT:
7.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 13:30:13) 
-- CODE:
a = float(input("Quantos litros de  polpa de frutas michael comprou? "))

total = a - 2/3 + 1/3

print(round(total, 3))



-- OUTPUT:
6.667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 13:30:22) 
-- CODE:
a = float(input("Quantos litros de  polpa de frutas michael comprou? "))

total = a - 2/3 + 1/3

print(round(total, 3))



-- EXECUTION TIME:
0.184048
-- TEST CASE 1:
---- input:
7
---- correct output:
2.333
---- user output:
6.667
-- TEST CASE 2:
---- input:
20.0
---- correct output:
6.667
---- user output:
19.667
-- TEST CASE 3:
---- input:
15
---- correct output:
5.0
---- user output:
14.667
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 13:53:31) 
-- CODE:
a = float(input("Quantos litros de  polpa de frutas michael comprou? "))

total = a - 2/3

print(round(total, 3))



-- OUTPUT:
6.333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 13:54:58) 
-- CODE:
a = float(input("Quantos litros de  polpa de frutas michael comprou? "))

total = a - 2/3

print(round(total + 1/3, 3))



-- OUTPUT:
6.667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 13:55:01) 
-- CODE:
a = float(input("Quantos litros de  polpa de frutas michael comprou? "))

total = a - 2/3

print(round(total + 1/3, 3))



-- EXECUTION TIME:
0.142549
-- TEST CASE 1:
---- input:
7
---- correct output:
2.333
---- user output:
6.667
-- TEST CASE 2:
---- input:
20.0
---- correct output:
6.667
---- user output:
19.667
-- TEST CASE 3:
---- input:
15
---- correct output:
5.0
---- user output:
14.667
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 08:25:15) 
-- CODE:
a = float(input("Quantos litros de  polpa de frutas michael comprou? "))

total = a - 2.3

print(round(total, 3))



-- OUTPUT:
4.7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 08:27:02) 
-- CODE:
a = float(input("Quantos litros de  polpa de frutas michael comprou? "))

total = a - 2.3

print(round(total, 3))



-- EXECUTION TIME:
0.163181
-- TEST CASE 1:
---- input:
7
---- correct output:
2.333
---- user output:
4.7
-- TEST CASE 2:
---- input:
20.0
---- correct output:
6.667
---- user output:
17.7
-- TEST CASE 3:
---- input:
15
---- correct output:
5.0
---- user output:
12.7
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 08:29:11) 
-- CODE:
a = float(input("Quantos litros de  polpa de frutas michael comprou? "))

b = a - 2.3

print(round(b, 3))



-- EXECUTION TIME:
0.124315
-- TEST CASE 1:
---- input:
7
---- correct output:
2.333
---- user output:
4.7
-- TEST CASE 2:
---- input:
20.0
---- correct output:
6.667
---- user output:
17.7
-- TEST CASE 3:
---- input:
15
---- correct output:
5.0
---- user output:
12.7
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 10:51:37) 
-- CODE:
a = float(input("Quantos litros de  polpa de frutas michael comprou? "))

b = a/3

print(round(b, 3))



-- EXECUTION TIME:
0.192905
-- TEST CASE 1:
---- input:
7
---- correct output:
2.333
---- user output:
2.333
-- TEST CASE 2:
---- input:
20.0
---- correct output:
6.667
---- user output:
6.667
-- TEST CASE 3:
---- input:
15
---- correct output:
5.0
---- user output:
5.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
